[workspace]
members = [
    "plugins/cliphist",
    "plugins/hyprwin",
    "plugins/applications",
    "plugins/symbols",
    "utils",
]
resolver = "2"

[workspace.dependencies]
anyrun-plugin = "0.1.0"
abi_stable = "0.11.3"
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false       # when possible

[profile.release.build-override]
opt-level = 0
codegen-units = 256
