[package]
name = "cliphist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin.workspace = true
abi_stable.workspace = true
nucleo.workspace = true
ron.workspace = true
serde.workspace = true
fuzzy-matcher = "0.3.7"
